--- a/notebooks/recipes.ipynb
+++ b/notebooks/recipes.ipynb
@@ -80,7 +80,7 @@
         }
       ],
       "source": [
-        "data = pd.read_csv('data/epi_r.csv')\n",
+        "data = pd.read_csv('../data/epi_r.csv')\n",
         "data.info()"
       ]
     },
@@ -112,12 +112,12 @@
         "data = data[[col for col in data.columns if not col.startswith('#')]]\n",
         "\n",
         "stoplist = ['calories', 'protein', 'fat', 'sodium', 'atlanta', 'alcoholic', 'anniversary', 'wheat/gluten-free', 'wedding', 'vegetarian', 'vegan', 'non-alcoholic', 'no-cook', 'london', 'louisville', 'halloween', 'graduation', 'gourmet', 'friendsgiving', 'entertaining']\n",
-        "states = pd.read_csv('data/us_states.csv')\n",
+        "states = pd.read_csv('../data/us_states.csv')\n",
         "states_list = states.values.flatten()\n",
         "states_list = [str(val).lower() for val in states_list]\n",
         "stoplist += states_list\n",
         "\n",
-        "countries = pd.read_csv('data/countries.csv')\n",
+        "countries = pd.read_csv('../data/countries.csv')\n",
         "countries_list = countries.values.flatten()\n",
         "countries_list = [str(val).lower() for val in countries_list]\n",
         "stoplist += countries_list\n",
@@ -1754,8 +1754,8 @@
         "data_y = data_y.round().astype(int)\n",
         "data_y = data_y.map(lambda x: 'bad' if x in (0, 1) else 'so-so' if x in (2, 3) else 'great')\n",
         "final_model.fit(data_X, data_y)\n",
-        "joblib.dump(final_model, 'data/best_model.pkl')\n",
-        "data_X.to_csv('data/features.csv', index=False)"
+        "joblib.dump(final_model, '../data/best_model.pkl')\n",
+        "data_X.to_csv('../data/features.csv', index=False)"
       ]
     },
     {
@@ -1766,7 +1766,7 @@
       },
       "outputs": [],
       "source": [
-        "data_X.to_csv('data/features.csv', index=False)"
+        "data_X.to_csv('../data/features.csv', index=False)"
       ]
     },
     {
@@ -2277,7 +2277,7 @@
         "API_KEY = ''\n",
         "URL = 'https://api.nal.usda.gov/fdc/v1/foods/search'\n",
         "\n",
-        "ingredients = pd.read_csv('data/features.csv').columns.tolist()\n",
+        "ingredients = pd.read_csv('../data/features.csv').columns.tolist()\n",
         "\n",
         "nutrient_data = []\n",
         "for ing in tqdm(ingredients):\n",
@@ -3348,7 +3348,7 @@
       },
       "outputs": [],
       "source": [
-        "nutrients_daily.to_csv('data/nutrients.csv')"
+        "nutrients_daily.to_csv('../data/nutrients.csv')"
       ]
     },
     {
@@ -3390,7 +3390,7 @@
       ],
       "source": [
         "URL = 'https://www.epicurious.com/'\n",
-        "data = pd.read_csv('data/epi_r.csv')\n",
+        "data = pd.read_csv('../data/epi_r.csv')\n",
         "titles = data[['title', 'rating']]\n",
         "\n",
         "def build__url(title):\n",
